fix install descheduler

--- a/task/add-imagepullsecret.yaml
+++ b/task/add-imagepullsecret.yaml
@@ -14,8 +14,8 @@ spec:
     clear: false
   steps:
     - name: Create Pull Image Secret
-      script: kubectl --kubeconfig /etc/kubernetes/admin.conf create secret docker-registry ${secret_name} --docker-server=${secret_server} --docker-username=${secret_username} --docker-password=${secret_password} -n ${secret_namespace}
+      content: kubectl --kubeconfig /etc/kubernetes/admin.conf create secret docker-registry ${secret_name} --docker-server=${secret_server} --docker-username=${secret_username} --docker-password=${secret_password} -n ${secret_namespace}
       when: "!${clear}"
     - name: Delete Pull Image Secret
-      script: kubectl --kubeconfig /etc/kubernetes/admin.conf delete secret ${secret_name} -n ${secret_namespace}
+      content: kubectl --kubeconfig /etc/kubernetes/admin.conf delete secret ${secret_name} -n ${secret_namespace}
       when: ${clear}
