--- a/task/add-localbinpath.yaml
+++ b/task/add-localbinpath.yaml
@@ -7,4 +7,4 @@ spec:
   desc: Set Path
   steps:
     - name: Set /usr/local/bin to PATH
-      script: echo "export PATH=$PATH:/usr/local/bin" >> /etc/profile
+      content: echo "export PATH=$PATH:/usr/local/bin" >> /etc/profile
