--- a/task/add-descheduler.yaml
+++ b/task/add-descheduler.yaml
@@ -5,10 +5,13 @@ metadata:
   namespace: default
 spec:
   desc: install descheduler
+  variables:
+    proxy: https://ghproxy.com/
+    action: apply
   steps:
-    - name: apply rbac
-      script: kubectl apply -f https://ghproxy.com/https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/descheduler/v0.25.1-rbac.yaml
-    - name: apply configmap
-      script: kubectl apply -f https://ghproxy.com/https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/descheduler/v0.25.1-configmap.yaml
-    - name: apply deployment
-      script: kubectl apply -f https://ghproxy.com/https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/descheduler/v0.25.1-deployment.yaml
+    - name: ${action} rbac
+      content: kubectl ${action} -f ${proxy}https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/descheduler/v0.25.1-rbac.yaml
+    - name: ${action} configmap
+      content: kubectl ${action} -f ${proxy}https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/descheduler/v0.25.1-configmap.yaml
+    - name: ${action} deployment
+      content: kubectl ${action} -f ${proxy}https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/descheduler/v0.25.1-deployment.yaml
