--- a/task/add-etchosts.yaml
+++ b/task/add-etchosts.yaml
@@ -11,8 +11,8 @@ spec:
     clear: false
   steps:
     - name: Add Etc Hosts
-      script: echo "${ip} ${domain}" >> /etc/hosts
+      content: echo "${ip} ${domain}" >> /etc/hosts
       when: ${clear} == false
     - name: Remove Etc Hosts
-      script: sed -i '/${domain}/d' /etc/hosts
+      content: sed -i '/${domain}/d' /etc/hosts
       when: ${clear} == true
