--- a/task/add-k8sdep.yaml
+++ b/task/add-k8sdep.yaml
@@ -7,10 +7,10 @@ spec:
   desc: Install Kubernetes Dependence
   steps:
     - name: Current System
-      script: echo ${distribution{}}
+      content: echo ${distribution{}}
     - name: Install for CentOS
-      script: yum install -y openssl ebtables ethtool socat ipset ipvsadm conntrack chrony
+      content: yum install -y openssl ebtables ethtool socat ipset ipvsadm conntrack chrony
       when: ${distribution{}} == centos
     - name: Install for Ubuntu
-      script: apt-get install -y openssl ebtables ethtool socat ipset ipvsadm conntrack chrony
+      content: apt-get install -y openssl ebtables ethtool socat ipset ipvsadm conntrack chrony
       when: ${distribution{}} == ubuntu
