--- a/task/add-sshkey.yaml
+++ b/task/add-sshkey.yaml
@@ -9,4 +9,4 @@ spec:
     key_content:
   steps:
     - name: Add Key to ~/.ssh/authorized_keys
-      script: echo "${key_content}" >> ~/.ssh/authorized_keys
+      content: echo "${key_content}" >> ~/.ssh/authorized_keys
