--- a/task/clear-docker.yaml
+++ b/task/clear-docker.yaml
@@ -11,8 +11,8 @@ spec:
   desc: Docker Clear
   steps:
     - name: Docker system prune
-      script: docker system prune
+      content: docker system prune
       allowfailure: "true"
     - name: Clear biz image
-      script: docker images |grep -E "([0-9a-z]+[-]){3,}[0-9]{9}" |awk '{print $3}' | xargs /usr/bin/docker rmi
+      content: docker images |grep -E "([0-9a-z]+[-]){3,}[0-9]{9}" |awk '{print $3}' | xargs /usr/bin/docker rmi
       allowfailure: "true"
