--- a/task/get-osstaus.yaml
+++ b/task/get-osstaus.yaml
@@ -11,22 +11,22 @@ spec:
   desc: Get OS Info
   steps:
     - name: Kernel Version
-      script: uname -r
+      content: uname -r
     - name: CPU Usage Percent/Load/Total
-      script: echo `grep 'cpu ' /proc/stat | awk '{usage=($2+$4)*100/($2+$4+$5)} END {printf ("%.2f",usage)}'`%/`top -bn1 | grep load | awk '{printf "%.2f\n", $(NF-2)}'`/`grep -c "model name" /proc/cpuinfo`
+      content: echo `grep 'cpu ' /proc/stat | awk '{usage=($2+$4)*100/($2+$4+$5)} END {printf ("%.2f",usage)}'`%/`top -bn1 | grep load | awk '{printf "%.2f\n", $(NF-2)}'`/`grep -c "model name" /proc/cpuinfo`
     - name: Mem Usage Percent/Total
-      script: echo `free -m | awk 'NR==2{printf "%.2f%%\n", $3*100/$2 }'`/`free -h | awk '/^Mem:/{print $2}'`
+      content: echo `free -m | awk 'NR==2{printf "%.2f%%\n", $3*100/$2 }'`/`free -h | awk '/^Mem:/{print $2}'`
     - name: Disk Usage Percent/Total
-      script: df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
+      content: df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
     - name: NF_Conntrack Usage/Total
-      script: echo `cat /proc/sys/net/netfilter/nf_conntrack_count`/`cat /proc/sys/net/netfilter/nf_conntrack_max`
+      content: echo `cat /proc/sys/net/netfilter/nf_conntrack_count`/`cat /proc/sys/net/netfilter/nf_conntrack_max`
     - name: Open Files Number
-      script: cat /proc/sys/fs/file-nr |awk '{printf "%.2f%%/%s\n", $1*100/$3, $3}'
+      content: cat /proc/sys/fs/file-nr |awk '{printf "%.2f%%/%s\n", $1*100/$3, $3}'
     - name: User Instances
-      script: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `/sbin/sysctl fs.inotify.max_user_instances|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
+      content: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `/sbin/sysctl fs.inotify.max_user_instances|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
     - name: User Watches
-      script: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U %p %c' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `/sbin/sysctl fs.inotify.max_user_watches|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
+      content: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U %p %c' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `/sbin/sysctl fs.inotify.max_user_watches|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
     - name: PID Usage
-      script: echo `ps -eLf | wc -l` `cat /proc/sys/kernel/pid_max` | awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
+      content: echo `ps -eLf | wc -l` `cat /proc/sys/kernel/pid_max` | awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
     - name: ARP Router
-      script: echo `/usr/sbin/arp -an | wc -l` `/sbin/sysctl net.ipv4.neigh.default.gc_thresh1 | awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
+      content: echo `/usr/sbin/arp -an | wc -l` `/sbin/sysctl net.ipv4.neigh.default.gc_thresh1 | awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
