--- a/task/init-os.yaml
+++ b/task/init-os.yaml
@@ -7,15 +7,15 @@ spec:
   desc: InitOS
   steps:
     - name: Set TimeZone
-      script: timedatectl set-timezone Asia/Shanghai
+      content: timedatectl set-timezone Asia/Shanghai
     - name: Close Selinux
-      script: systemctl stop firewalld && systemctl disable firewalld ;
+      content: systemctl stop firewalld && systemctl disable firewalld ;
         sed -i 's/SELINUX=enforcing/SELINUX=disabled/g' /etc/selinux/config ;
     - name: Clear History
-      script: history -c ;
+      content: history -c ;
         echo "" > /root/.bash_history
     - name: Clear Log
-      script: cd /var/log/;
+      content: cd /var/log/;
         echo "" > dmesg;
         chattr -a /var/log/messages;
         echo "" > messages;
