--- a/task/renew-kube-cert.yaml
+++ b/task/renew-kube-cert.yaml
@@ -7,13 +7,13 @@ spec:
   desc: Renew Cert
   steps:
     - name: Check
-      script: kubeadm certs check-expiration
+      content: kubeadm certs check-expiration
     - name: Backup
-      script: cp -r /etc/kubernetes /etc/kubernetes.bak
+      content: cp -r /etc/kubernetes /etc/kubernetes.bak
     - name: Renew Cert
-      script: kubeadm certs renew all /etc/kubernetes/kubeadm-config.yaml
+      content: kubeadm certs renew all /etc/kubernetes/kubeadm-config.yaml
     - name: Check
-      script: kubeadm certs check-expiration
+      content: kubeadm certs check-expiration
     - name: Restart Service
       script:
         docker ps |grep -E 'k8s_kube-apiserver|k8s_kube-controller-manager|k8s_kube-scheduler' | awk -F ' ' '{print $1}' |xargs docker restart;
