--- a/task/set-docker-liverestore.yaml
+++ b/task/set-docker-liverestore.yaml
@@ -7,12 +7,12 @@ spec:
   desc: Set Docker liverestore true
   steps:
     - name: Make Docker Etc Dir
-      script: mkdir -p /etc/docker
+      content: mkdir -p /etc/docker
     - name: Make Daemon.json
-      script: test -f /etc/docker/daemon.json || echo '{}' > /etc/docker/daemon.json
+      content: test -f /etc/docker/daemon.json || echo '{}' > /etc/docker/daemon.json
     - name: Set Docker live-restore
-      script: 'jq ". + {\"live-restore\": true}" <<< $(cat /etc/docker/daemon.json ) > /etc/docker/daemon.json'
+      content: 'jq ". + {\"live-restore\": true}" <<< $(cat /etc/docker/daemon.json ) > /etc/docker/daemon.json'
     - name: Reload Docker
-      script: systemctl reload docker
+      content: systemctl reload docker
     - name: Show Docker config
-      script: cat /etc/docker/daemon.json
+      content: cat /etc/docker/daemon.json
