--- a/task/upgrade-1.16m.yaml
+++ b/task/upgrade-1.16m.yaml
@@ -9,40 +9,40 @@ spec:
     cluster_version: 1.17.17
   steps:
     - name: remove port0
-      script: find /etc/kubernetes/manifests/ -type f | xargs sed -i '/- --port=0/d'
+      content: find /etc/kubernetes/manifests/ -type f | xargs sed -i '/- --port=0/d'
     - name: replace gcr.io
-      script: find /etc/kubernetes/manifests/ -type f | xargs sed -i "s/gcr.io\/google-containers/k8simage/"
+      content: find /etc/kubernetes/manifests/ -type f | xargs sed -i "s/gcr.io\/google-containers/k8simage/"
     - name: add kubernetes repo
-      script: echo -e "[kubernetes]\nname=Kubernetes\nbaseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64\nenabled=1\ngpgcheck=0\nrepo_gpgcheck=0\ngpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg" > /etc/yum.repos.d/kubernetes.repo
+      content: echo -e "[kubernetes]\nname=Kubernetes\nbaseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64\nenabled=1\ngpgcheck=0\nrepo_gpgcheck=0\ngpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg" > /etc/yum.repos.d/kubernetes.repo
     - name: make cache
-      script: yum makecache
+      content: yum makecache
     - name: remove kubectl
-      script: yum remove -y kubectl
+      content: yum remove -y kubectl
       allowfailure: true
     - name: install kubectl
-      script: yum install -y kubectl-${cluster_version}-0 --disableexcludes=kubernetes
+      content: yum install -y kubectl-${cluster_version}-0 --disableexcludes=kubernetes
     - name: remove kubeadm
-      script: yum remove -y kubeadm
+      content: yum remove -y kubeadm
       allowfailure: true
     - name: install kubeadm
-      script: yum install -y kubeadm-${cluster_version}-0 --disableexcludes=kubernetes
+      content: yum install -y kubeadm-${cluster_version}-0 --disableexcludes=kubernetes
     - name: get kubeadm-config
-      script: kubeadm config view > kubeadm-config.yaml
+      content: kubeadm config view > kubeadm-config.yaml
     - name: view upgrade plan
-      script: kubeadm upgrade plan --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration --config ./kubeadm-config.yaml
+      content: kubeadm upgrade plan --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration --config ./kubeadm-config.yaml
     - name: upgrade cluster
-      script: kubeadm upgrade apply v${cluster_version} --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration --config ./kubeadm-config.yaml -y
+      content: kubeadm upgrade apply v${cluster_version} --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration --config ./kubeadm-config.yaml -y
     - name: stop kubelet
-      script: systemctl stop kubelet
+      content: systemctl stop kubelet
     - name: remove kubelet
-      script: yum remove -y kubelet
+      content: yum remove -y kubelet
     - name: install kubelet
-      script: yum install -y kubelet-${cluster_version}-0 --disableexcludes=kubernetes
+      content: yum install -y kubelet-${cluster_version}-0 --disableexcludes=kubernetes
     - name: replace systemd kubelet
       scprit: sed -i "s/local\/bin\/kubelet/bin\/kubelet/" /etc/systemd/system/kubelet.service
     - name: restart kubelet
-      script: systemctl daemon-reload;
+      content: systemctl daemon-reload;
         systemctl restart kubelet;
         systemctl status kubelet;
     - name: kubectl version
-      script: kubectl version
+      content: kubectl version
