--- a/task/upgrade-1.19m.yaml
+++ b/task/upgrade-1.19m.yaml
@@ -9,30 +9,30 @@ spec:
     cluster_version: 1.20.15
   steps:
     - name: remove kubectl
-      script: yum remove -y kubectl
+      content: yum remove -y kubectl
       allowfailure: true
     - name: install kubectl
-      script: yum install -y kubectl-${cluster_version}-0 --disableexcludes=kubernetes
+      content: yum install -y kubectl-${cluster_version}-0 --disableexcludes=kubernetes
     - name: remove kubeadm
-      script: yum remove -y kubeadm
+      content: yum remove -y kubeadm
       allowfailure: true
     - name: install kubeadm
-      script: yum install -y kubeadm-${cluster_version}-0 --disableexcludes=kubernetes
+      content: yum install -y kubeadm-${cluster_version}-0 --disableexcludes=kubernetes
     - name: view upgrade plan
-      script: kubeadm upgrade plan --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration
+      content: kubeadm upgrade plan --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration
     - name: upgrade cluster
-      script: kubeadm upgrade apply v${cluster_version} --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration -y
+      content: kubeadm upgrade apply v${cluster_version} --ignore-preflight-errors=ControlPlaneNodesReady,CoreDNSUnsupportedPlugins,CoreDNSMigration -y
     - name: stop kubelet
-      script: systemctl stop kubelet
+      content: systemctl stop kubelet
     - name: remove kubelet
-      script: yum remove -y kubelet
+      content: yum remove -y kubelet
     - name: install kubelet
-      script: yum install -y kubelet-${cluster_version}-0 --disableexcludes=kubernetes
+      content: yum install -y kubelet-${cluster_version}-0 --disableexcludes=kubernetes
     - name: restart kubelet
-      script: systemctl daemon-reload;
+      content: systemctl daemon-reload;
         systemctl restart kubelet;
         systemctl status kubelet;
     - name: kubectl version
-      script: kubectl version
+      content: kubectl version
     - name: kubelet version
-      script: kubelet --version
+      content: kubelet --version
