--- a/task/velero-status.yaml
+++ b/task/velero-status.yaml
@@ -9,6 +9,6 @@ spec:
     velero_version: v1.9.2
   steps:
     - name: Backup Status
-      script: ./velero-${velero_version}-linux-amd64/velero get backup
+      content: ./velero-${velero_version}-linux-amd64/velero get backup
     - name: Restore Status
-      script: ./velero-${velero_version}-linux-amd64/velero get restore
+      content: ./velero-${velero_version}-linux-amd64/velero get restore
