--- a/task/velero-uninstall.yaml
+++ b/task/velero-uninstall.yaml
@@ -7,6 +7,6 @@ spec:
   desc: Uninstall Velero
   steps:
     - name: Uninstall Velero Server
-      script: kubectl delete namespace/velero clusterrolebinding/velero & kubectl delete crds -l component=velero
+      content: kubectl delete namespace/velero clusterrolebinding/velero & kubectl delete crds -l component=velero
     - name: Clear Env
-      script: rm -rf velero*
+      content: rm -rf velero*
