--- a/task/add-metricsserver.yaml
+++ b/task/add-metricsserver.yaml
@@ -4,13 +4,11 @@ metadata:
   name: add-metricsserver
   namespace: default
 spec:
-  desc: MetricsServer
+  desc: add metricsServer
   variables:
-    clear: false
+    proxy: https://ghproxy.com/
+    action: apply
+    version: 0.6.2
   steps:
-    - name: Install MetricsServer
-      content: kubectl apply -f GetAvailableUrl(https://raw.githubusercontent.com/shaowenchen/image-syncer/main/kubernetes/metrics-server-0.5.0.yaml)
-      when: ${clear} == false
-    - name: Remove MetricsServer
-      content: kubectl delete -f GetAvailableUrl(https://raw.githubusercontent.com/shaowenchen/image-syncer/main/kubernetes/metrics-server-0.5.0.yaml)
-      when: ${clear} == true
+    - name: ${action} MetricsServer
+      content: kubectl ${action} -f ${proxy}https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/kubernetes/metrics-server-${version}.yaml
