--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Cli
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: shaowenchen/ops-cli:latest
+          file: Dockerfile-Cli
       - name: Build and push Server
         uses: docker/build-push-action@v3
         with:
