--- a/task/clear-docker.yaml
+++ b/task/clear-docker.yaml
@@ -15,8 +15,10 @@ spec:
     - name: Clear none image
       content: docker image prune -f
       allowfailure: "true"
-    - name: Clear biz image
-      content: docker images | egrep "([0-9a-z]+[-]){3,}[0-9]{9}" | egrep -v "seconds|minutes" | awk '{print $3}' | xargs /usr/bin/docker rmi
+    - name: Clear biz image, eg，123-123-123
+      content: docker images | egrep "([0-9a-z]+[-]){2,}[0-9]{9}" | egrep -v "seconds|minutes" | awk '{print $3}' | xargs /usr/bin/docker rmi -f
       allowfailure: "true"
-    - name: Clear Network
+    - name: Clear network
       content: docker network prune -f
+    - name: Clear volume
+      content: docker volume prune -f
