--- a/task/clear-docker.yaml
+++ b/task/clear-docker.yaml
@@ -4,7 +4,7 @@ metadata:
   name: clear-docker
   namespace: default
 spec:
-  # crontab: "*/5 * * * *"
+  crontab: "*/5 * * * *"
   nameref: prod
   typeref: cluster
   all: true
