--- a/task/fix-kernel.yaml
+++ b/task/fix-kernel.yaml
@@ -13,10 +13,19 @@ spec:
     - name: Max Thread
       content: echo "kernel.threads-max=65535 " >> /etc/sysctl.conf && sysctl -p
     - name: Max Conntrack
-      content: echo "net.netfilter.nf_conntrack_max=2001234" >> /etc/sysctl.conf && sysctl -p
-    - name: Max ARP Router GC1
-      content: echo "net.ipv4.neigh.default.gc_thresh1=80000" >> /etc/sysctl.conf && sysctl -p
-    - name: Max ARP Router GC2
-      content: echo "net.ipv4.neigh.default.gc_thresh2=90000" >> /etc/sysctl.conf && sysctl -p
-    - name: Max ARP Router GC3
-      content: echo "net.ipv4.neigh.default.gc_thresh3=100000" >> /etc/sysctl.conf && sysctl -p
+      content: echo "net.netfilter.nf_conntrack_max=3200000" >> /etc/sysctl.conf && sysctl -p ;
+          echo "net.netfilter.nf_conntrack_tcp_be_liberal=1" >> /etc/sysctl.conf && sysctl -p ;
+          echo "net.netfilter.nf_conntrack_tcp_loose=1" >> /etc/sysctl.conf && sysctl -p ;
+          echo "net.netfilter.nf_conntrack_buckets=1600512" >> /etc/sysctl.conf && sysctl -p ;
+          echo "net.netfilter.nf_conntrack_tcp_timeout_time_wait=30" >> /etc/sysctl.conf && sysctl -p ;
+    - name: Max ARP Router
+      content: echo "net.ipv4.neigh.default.gc_thresh1=80000" >> /etc/sysctl.conf && sysctl -p ;
+          echo "net.ipv4.neigh.default.gc_thresh2=90000" >> /etc/sysctl.conf && sysctl -p ;
+          echo "net.ipv4.neigh.default.gc_thresh3=100000" >> /etc/sysctl.conf && sysctl -p ;
+    - name: ipv4
+      content: echo "net.ipv4.tcp_max_orphans=32768" >> /etc/sysctl.conf && sysctl -p ;
+          echo "net.ipv4.ip_forward=1" >> /etc/sysctl.conf && sysctl -p ;
+    - name: fd
+      content: echo "fs.file-max=1048576" >> /etc/sysctl.conf && sysctl -p ;
+          echo "fs.inotify.max_user_instances=8192" >> /etc/sysctl.conf && sysctl -p ;
+          echo "fs.inotify.max_user_watches=524288" >> /etc/sysctl.conf && sysctl -p ;
