add auto add req-limit for ds and sts

--- a/task/add-reqlimit.yaml
+++ b/task/add-reqlimit.yaml
@@ -4,14 +4,15 @@ metadata:
   name: add-reqlimit
   namespace: default
 spec:
-  desc: add request and limit
+  desc: add request and limit, e.g. Deployment\StatefulSet\DaemonSet
   variables:
     namespace: default
-    name: 
+    name:
+    kind: Deployment
   steps:
     - name: add request limit
       kubernetes:
         action: SetReqLimit
-        kind: Deployment
+        kind: ${kind}
         name: ${name}
         namespace: ${namespace}
