--- a/task/get-reqlimit.yaml
+++ b/task/get-reqlimit.yaml
@@ -6,9 +6,17 @@ metadata:
 spec:
   desc: get request and limit
   variables:
-    namespace: default
+    namespace: "all"
   steps:
     - name: get cpu request limit
+      content: kubectl get pod -n ${namespace} -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,CPU-REQ:.spec.containers[*].resources.requests.cpu,CPU-LIMIT:.spec.containers[*].resources.limits.cpu'
+      when: ${namespace}!="all"
+    - name: get cpu request limit(all)
       content: kubectl get pod -A -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,CPU-REQ:.spec.containers[*].resources.requests.cpu,CPU-LIMIT:.spec.containers[*].resources.limits.cpu'
+      when: ${namespace}=="all"
     - name: get mem request limit
+      content: kubectl get pod -n ${namespace} -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,MEM-REQ:.spec.containers[*].resources.requests.memory,MEM-LIMIT:.spec.containers[*].resources.limits.memory'
+      when: ${namespace}!="all"
+    - name: get mem request limit(all)
       content: kubectl get pod -A -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,MEM-REQ:.spec.containers[*].resources.requests.memory,MEM-LIMIT:.spec.containers[*].resources.limits.memory'
+      when: ${namespace}=="all"
