--- a/task/add-imagepullsecret.yaml
+++ b/task/add-imagepullsecret.yaml
@@ -11,11 +11,12 @@ spec:
     secret_password: ""
     secret_name: mysecret
     secret_namespace: default
+    kubeconfig: "/etc/kubernetes/admin.conf"
     clear: false
   steps:
     - name: Create Pull Image Secret
-      content: kubectl --kubeconfig /etc/kubernetes/admin.conf create secret docker-registry ${secret_name} --docker-server=${secret_server} --docker-username=${secret_username} --docker-password=${secret_password} -n ${secret_namespace}
+      content: kubectl --kubeconfig ${kubeconfig} create secret docker-registry ${secret_name} --docker-server=${secret_server} --docker-username=${secret_username} --docker-password=${secret_password} -n ${secret_namespace}
       when: "!${clear}"
     - name: Delete Pull Image Secret
-      content: kubectl --kubeconfig /etc/kubernetes/admin.conf delete secret ${secret_name} -n ${secret_namespace}
+      content: kubectl --kubeconfig ${kubeconfig} delete secret ${secret_name} -n ${secret_namespace}
       when: ${clear}
