--- a/task/app-metricsserver.yaml
+++ b/task/app-metricsserver.yaml
@@ -9,6 +9,7 @@ spec:
     proxy: https://ghproxy.com/
     action: apply
     version: 0.5.0
+    kubeconfig: "/etc/kubernetes/admin.conf"
   steps:
     - name: ${action} MetricsServer
-      content: kubectl ${action} -f ${proxy}https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/observation/metrics-server-${version}.yaml
+      content: kubectl --kubeconfig ${kubeconfig} ${action} -f ${proxy}https://raw.githubusercontent.com/shaowenchen/kubernetes-components/master/observation/metrics-server-${version}.yaml
