--- a/task/list-reqlimit.yaml
+++ b/task/list-reqlimit.yaml
@@ -1,22 +1,22 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: get-reqlimit
+  name: list-reqlimit
   namespace: default
 spec:
-  desc: get request and limit
+  desc: list request and limit
   variables:
     namespace: "all"
   steps:
-    - name: get cpu request limit
+    - name: list cpu request limit
       content: kubectl get pod -n ${namespace} -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,CPU-REQ:.spec.containers[*].resources.requests.cpu,CPU-LIMIT:.spec.containers[*].resources.limits.cpu'
       when: ${namespace}!="all"
-    - name: get cpu request limit(all)
+    - name: list cpu request limit(all)
       content: kubectl get pod -A -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,CPU-REQ:.spec.containers[*].resources.requests.cpu,CPU-LIMIT:.spec.containers[*].resources.limits.cpu'
       when: ${namespace}=="all"
-    - name: get mem request limit
+    - name: list mem request limit
       content: kubectl get pod -n ${namespace} -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,MEM-REQ:.spec.containers[*].resources.requests.memory,MEM-LIMIT:.spec.containers[*].resources.limits.memory'
       when: ${namespace}!="all"
-    - name: get mem request limit(all)
+    - name: list mem request limit(all)
       content: kubectl get pod -A -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,MEM-REQ:.spec.containers[*].resources.requests.memory,MEM-LIMIT:.spec.containers[*].resources.limits.memory'
       when: ${namespace}=="all"
