add promql alert

--- a/config/crd/bases/crd.chenshaowen.com_tasks.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_tasks.yaml
@@ -142,6 +142,13 @@ spec:
                       type: string
                     name:
                       type: string
+                    prometheus:
+                      properties:
+                        endpoint:
+                          type: string
+                        query:
+                          type: string
+                      type: object
                     remotefile:
                       type: string
                     when:
