--- a/task/alert-http-status.yaml
+++ b/task/alert-http-status.yaml
@@ -8,14 +8,12 @@ spec:
   crontab: "1/* * * * *"
   variables:
     url: https://www.chenshaowen.com/
-    status: "300"
-    message: "${url} http status is not ${status}"
+    expect: "200"
+    message: "${url} http status is not ${expect}"
   steps:
     - name: get status
       content: curl -I -m 10 -o /dev/null -s -w %{http_code} ${url}
-    - name: echo result
-      content: echo ${result}
     - name: notifaction
-      when: ${result} != ${status}
+      when: ${result} != ${expect}
       content: |
         curl -X POST  'https://xz.wps.cn/api/v1/webhook/send?key='  -H 'content-type: application/json' -d '{ "msgtype": "text", "text": { "content": "${message}" } }'
