--- a/config/crd/bases/crd.chenshaowen.com_tasks.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_tasks.yaml
@@ -62,6 +62,8 @@ spec:
                 type: string
               desc:
                 type: string
+              incluster:
+                type: boolean
               name:
                 type: string
               nameref:
