--- a/task/alert-promql.yaml
+++ b/task/alert-promql.yaml
@@ -4,20 +4,17 @@ metadata:
   name: alert-promql
   namespace: default
 spec:
-  nameref: prod
-  typeref: cluster
   crontab: "1/* * * * *"
   desc: alert by promql
   variables:
-    query: "abs(max(tekton_pipelines_controller_running_pipelineruns_count) - count(count by (pod, label_tekton_dev_pipeline_run)(kube_pod_labels{label_tekton_dev_task_run!=''}) and on (pod) kube_pod_container_status_running{} > 0) )"
-    endpoint: "http://prometheus-server.monitor.svc.cluster.local:9090"
-    expect: "2"
-    message: "Pending PipelineRun count is more than ${expect}"
+    if: "abs(max(tekton_pipelines_controller_running_pipelineruns_count) - count(count by (pod, label_tekton_dev_pipeline_run)(kube_pod_labels{label_tekton_dev_task_run!=''}) and on (pod) kube_pod_container_status_running{} > 0) ) > 2"
+    url: "http://0.0.0.0:9090"
+    message: "Pending Pipeline Alert\n ${result}"
   steps:
     - name: get status
-      prometheus:
-        endpoint: ${endpoint}
-        query: ${query}
+      alert:
+        url: ${url}
+        if: ${if}
     - name: notifaction
       when: ${result} > ${expect}
       content: |
